[project]
name = "aiostd"
version = "0.0.1"
description = "A simple library for asynchronous communication with standard I/O."
requires-python = ">=3.8"
authors = [
  { name="Ali Aliyev", email="ali@aliev.me" },
]
readme = "README.md"
keywords = ["asyncio", "stdin", "stdout"]
classifiers = ['Development Status :: 5 - Production/Stable',
               'Intended Audience :: Developers',
               'Programming Language :: Python',
               'License :: OSI Approved :: MIT License',
               'Natural Language :: English',
               'Operating System :: OS Independent',
               'Programming Language :: Python',
               'Programming Language :: Python :: 3',
               'Programming Language :: Python :: 3.8',
               'Programming Language :: Python :: 3.9',
               'Programming Language :: Python :: 3.10',
               'Framework :: AsyncIO',
               'Topic :: Software Development :: Libraries :: Python Modules',
               'Topic :: Utilities']
dependencies = [
  "typing_extensions"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "wheel",
  "twine",
  "build",
  "pytest",
  "pytest-cov"
]

[tool.setuptools]
packages = ["aiostd"]

[project.urls]
"Homepage" = "https://github.com/aliev/aiostd"
"Bug Tracker" = "https://github.com/aliev/aiostd/issues"

[tool.isort]
profile = "black"

[tool.mypy]
warn_no_return = false
disallow_untyped_defs = false
allow_redefinition = true

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "-s --strict-markers -vv --cache-clear --maxfail=1 --cov=aiostd --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail"
